plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.141'
}

version = mod_version
group = mod_group_id

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }
    maven {
        name = "Forge"
        url = "https://maven.minecraftforge.net"
    }
}

configurations {
    shaderpacks {
        canBeConsumed = false
        canBeResolved = true
        transitive = false
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    // Access Transformers: the file src/main/resources/META-INF/accesstransformer.cfg
    // is automatically detected if it exists. Use .from() to add extra locations.
    // accessTransformers.from('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            systemProperty 'neoforge.disableGlValidation', 'true'
        }

        client2 {
            client()
            gameDirectory = project.file('run')
            programArguments = ['--username', 'SShakusora']
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            systemProperty 'neoforge.disableGlValidation', 'true'
        }

        structureEditor {
            client()
            gameDirectory = project.file('run')
            programArguments = ['--quickPlaySingleplayer', 'sap_structure_editor']
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            systemProperty 'shadowsandpetals.structureEditor', 'true'
        }

        server {
            server()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        clientData {
            clientData()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

tasks.register('prepareStructureEditorWorld', JavaExec) {
    group = 'shadowsandpetals'
    description = 'Creates or refreshes the void structure-editor world and links its structure directory to src/main/resources.'
    dependsOn tasks.named('classes')
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.sshakusora.shadowsandpetals.dev.StructureEditorWorldBootstrap'
    workingDir = file('run')
    args file('run').absolutePath,
            file('src/main/resources/data/shadowsandpetals/structure').absolutePath
}

tasks.named('runStructureEditor') {
    dependsOn tasks.named('prepareStructureEditorWorld')
}

tasks.register('installClientShaderpacks', Copy) {
    group = 'shadowsandpetals'
    description = 'Installs shader packs into the main client run directory.'
    from configurations.shaderpacks
    into layout.projectDirectory.dir('run/shaderpacks')
}

tasks.register('installShaderpacks') {
    group = 'shadowsandpetals'
    description = 'Installs development shader packs into the shared client run directory.'
    dependsOn tasks.named('installClientShaderpacks')
}

tasks.register('cleanRunLogs', Delete) {
    group = 'shadowsandpetals'
    description = 'Deletes logs and crash reports from the shared client run directory.'
    delete layout.projectDirectory.dir('run/logs'), layout.projectDirectory.dir('run/crash-reports')
}

tasks.named('runClient') {
    dependsOn tasks.named('installClientShaderpacks')
}

tasks.named('runClient2') {
    dependsOn tasks.named('installClientShaderpacks')
}

tasks.named('runStructureEditor') {
    dependsOn tasks.named('installClientShaderpacks')
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

sourceSets.test {
    compileClasspath += sourceSets.main.compileClasspath
    runtimeClasspath += sourceSets.main.runtimeClasspath
}


dependencies {
    testImplementation platform("org.junit:junit-bom:5.12.2")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"

    // JEI
    compileOnly "mezz.jei:jei-26.1.2-common-api:29.5.0.28"
    compileOnly "mezz.jei:jei-26.1.2-neoforge-api:29.5.0.28"
    runtimeOnly "mezz.jei:jei-26.1.2-neoforge:29.5.0.28"

    // Jade
    implementation "maven.modrinth:jade:26.0.10+neoforge"

    // Serene Seasons
    implementation "com.github.glitchfiend:SereneSeasons-neoforge:26.1.2-26.1.2.0.4"

    // Shader development runtime
    runtimeOnly "maven.modrinth:sodium:mc26.1.2-0.9.1-neoforge"
    runtimeOnly "maven.modrinth:iris:1.11.2+26.1-neoforge"

    // Shader packs for visual compatibility testing
    shaderpacks "maven.modrinth:complementary-reimagined:r5.8.1@zip"
    shaderpacks "maven.modrinth:complementary-unbound:r5.8.1@zip"
    shaderpacks "maven.modrinth:bsl-shaders:10.1.3@zip"
    shaderpacks "maven.modrinth:photon-shader:v1.3b@zip"
    shaderpacks "maven.modrinth:makeup-ultra-fast-shaders:9.5c@zip"
}

tasks.named('test', Test) {
    useJUnitPlatform()
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
